# CPP-for-programmers

Container_Auto_Lambda/: CMakeLists.txt  foo.cpp  foo.h  oppgave1  oppgave1.cpp  oppgave2.cpp
Oving-5/: CMakeLists.txt  ChessBoard.h  Main.cpp
Oving-6/: CMakeLists.txt  ChessBoard.h  ChessBoardPrint.h  Main.cpp
Oving-6/Oving-1/: CMakeLists.txt  ChessBoard.h  ChessBoardPrint.h
Oving-6/Oving-2/: CMakeLists.txt  EchoServer.cpp
Oving-7/oppgave1/: CMakeLists.txt  Fraction.cpp  Fraction.hpp  main.cpp
Oving-7/oppgave2/: CMakeLists.txt  Set.cpp  Set.hpp  main.cpp
Oving_1/TempA/: CMakeLists.txt  temperatureA.cpp
Oving_1/TempB/: CMakeLists.txt  temperatureB.cpp
Oving_2/: CMakeLists.txt  Oppgave_1.cpp  Oppgave_4.cpp  Oppgave_6.cpp  oppgave_5.cpp
Oving_3/: CMakeLists.txt  Circle.cpp  Circle.h  Commodity.cpp  Commodity.hpp  Oppgave_1.cpp  Oppgave_2.cpp  Oppgave_4.cpp
templates/: CMakeLists.txt
templates/oppgave-1/: CMakeLists.txt  template.cpp
templates/oppgave-2/: Pair.cpp
